# services-contracts

./: Cargo.toml  README.md  update_schema.sh
artifacts/: checksums.txt  checksums_intermediate.txt  nexus_airdrop.wasm  nexus_community.wasm  nexus_governance.wasm  nexus_staking.wasm  nexus_vesting.wasm
contracts/airdrop/: Cargo.toml
contracts/airdrop/examples/: schema.rs
contracts/airdrop/schema/: config_response.json  instantiate_msg.json  query_msg.json
contracts/airdrop/src/: contract.rs  error.rs  lib.rs  state.rs  tests.rs
contracts/community/: Cargo.toml
contracts/community/examples/: schema.rs
contracts/community/schema/: config_response.json  execute_msg.json  governance_msg.json  instantiate_msg.json
contracts/community/src/: commands.rs  contract.rs  lib.rs  queries.rs  state.rs
contracts/community/src/tests/: change_config.rs  instantiate.rs  mod.rs  spend.rs
contracts/governance/: Cargo.toml
contracts/governance/examples/: schema.rs
contracts/governance/schema/: anyone_msg.json  config_response.json  cw20_hook_msg.json  execute_msg.json  governance_msg.json  instantiate_msg.json  poll_execute_msg.json  poll_response.json  poll_status.json  polls_response.json  query_msg.json  vote_option.json  voter_info.json  voters_response.json  voters_response_item.json
contracts/governance/src/: commands.rs  contract.rs  lib.rs  nexus_prism.rs  querier.rs  queries.rs  state.rs  utils.rs
contracts/governance/src/tests/: mock_querier.rs  mod.rs  tests.rs
contracts/staking/: Cargo.toml
contracts/staking/examples/: schema.rs
contracts/staking/schema/: config_response.json  cw20_hook_msg.json  execute_msg.json  instantiate_msg.json  query_msg.json
contracts/staking/src/: contract.rs  state.rs  testing.rs
contracts/staking/src/tests/: add_schedule.rs  auto_staking.rs  deposit_and_withdraw.rs  instantiate.rs  migrate_staking.rs  mod.rs  queries.rs
contracts/vesting/: Cargo.toml
contracts/vesting/examples/: schema.rs
contracts/vesting/schema/: claimable_amount_response.json  execute_msg.json  instantiate_msg.json  query_msg.json  vesting_account.json  vesting_account_response.json  vesting_accounts_response.json  vesting_info.json  vesting_schedule.json
contracts/vesting/src/: contract.rs  state.rs  tests.rs
