[package]
name = "nexus-airdrop"
version = "0.1.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Airdrop contract for Nexus Protocol - allow users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
services = { path = "../../packages/services", default-features = false, version = "0.1.0"}
cosmwasm-std = { version = "0.15.0", features = ["iterator"] }
cosmwasm-storage = { version = "0.15.0", features = ["iterator"] }
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main" }
hex = "0.4"
schemars = "0.8.1"
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "0.15.0"
cosmwasm-vm = { version = "0.15.0", default-features = false, features = ["iterator"] }
