[package]
name = "nexus-airdrop"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Airdrop contract for Nexus Protocol - allow users to claim rewards with Merkle Tree based proof"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/services-contracts"
homepage = "todo"
documentation = "todo"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
services = { path = "../../packages/services", default-features = false, version = "1.0.0"}
cosmwasm-std = { version = "0.16.1", features = ["iterator"] }
cosmwasm-storage = { version = "0.16.1", features = ["iterator"] }
cw20 = { version = "0.8.1" }
hex = "0.4"
schemars = "0.8.1"
sha3 = { version = "0.9.1", default-features = false }
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = "0.16"
cosmwasm-vm = { version = "0.16", default-features = false, features = ["iterator"] }
