[package]
name = "nexus-community"
version = "0.1.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Community contract for Nexus Protocol - Keeps premined PSI token which can be used through Gov proposal"
license = "Apache-2.0"
repository = "https://github.com/nexus/services-contracts"
homepage = "https://nexus.io"
documentation = "https://docs.nexus.io"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
# TODO: use deps from crates.io
# cw20 = { version = "0.7" }
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main" }
services = { path = "../../packages/services", default-features = false, version = "0.1.0"}
cosmwasm-std = { version = "0.15" }
cosmwasm-storage = { version = "0.15" }
# TODO: use deps from crates.io
# cw-storage-plus = { version = "0.7", features = ["iterator"] }
# cw-storage-plus = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main" , features = ["iterator"]}
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
