[package]
name = "nexus-community"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Community contract for Nexus Protocol - Keeps premined PSI token which can be used through Gov proposal"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/services-contracts"
homepage = "todo"
documentation = "todo"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.7" }
services = { path = "../../packages/services", default-features = false, version = "1.0.0"}
cosmwasm-std = { version = "0.15" }
cosmwasm-storage = { version = "0.15" }
schemars = "0.8.1"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.24" }
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.0"

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0" }
