[package]
authors = ["Nexus Labs"]
description = "A Goverance contract for Nexus Protocol - allows a user to create poll and vote"
documentation = "todo"
edition = "2018"
homepage = "todo"
license = "Apache-2.0"
name = "nexus-governance"
repository = "https://github.com/Nexus-Protocol/services-contracts"
version = "1.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cosmwasm-std = {version = "0.16.1", features = ["iterator"]}
cosmwasm-storage = {version = "0.16.1", features = ["iterator"]}
cw-storage-plus = {version = "0.8.1"}
cw0 = {version = "0.8.1"}
cw20 = {version = "0.8.1"}
nexus-prism-protocol = {path = "../../../nex-prism-convex/packages/nexus-prism-protocol"}
protobuf = {version = "2", features = ["with-bytes"]}
schemars = "0.8.1"
serde = {version = "1.0.126", default-features = false, features = ["derive"]}
services = {path = "../../packages/services", default-features = false, version = "1.0.0"}

[dev-dependencies]
cosmwasm-schema = {version = "0.16"}
