[package]
name = "nexus-staking"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Staking contract for Nexus Protocol - distribute rewards to stakers"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/services-contracts"
homepage = "todo"
documentation = "todo"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16", features = ["iterator"] }
cosmwasm-storage = { version = "0.16", features = ["iterator"] }
services = { path = "../../packages/services", default-features = false, version = "1.0.0"}
schemars = "0.8.1"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = "0.16"
