[package]
name = "nexus-vesting"
version = "0.1.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Vesting contract for Nexus Protocol"
license = "Apache-2.0"
repository = "https://github.com/nexus/services-contracts"
homepage = "https://nexus.io"
documentation = "https://docs.nexus.io"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
#TODO: use from crates
cw20 = { git = "https://github.com/CosmWasm/cosmwasm-plus", branch = "main" }
cosmwasm-std = { version = "0.15", features = ["iterator"] }
cosmwasm-storage = { version = "0.15", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
services = { path = "../../packages/services", default-features = false, version = "0.1.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.15.0", default-features = false  }
