[package]
name = "nexus-vesting"
version = "1.0.0"
authors = ["Nexus Labs"]
edition = "2018"
description = "A Vesting contract for Nexus Protocol"
license = "Apache-2.0"
repository = "https://github.com/Nexus-Protocol/services-contracts"
homepage = "todo"
documentation = "todo"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw20 = { version = "0.8" }
cosmwasm-std = { version = "0.16", features = ["iterator"] }
cosmwasm-storage = { version = "0.16", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.126", default-features = false, features = ["derive"] }
services = { path = "../../packages/services", default-features = false, version = "1.0.0"}

[dev-dependencies]
cosmwasm-schema = { version = "0.16", default-features = false  }
